All players and Banker now saving

--- a/app/views/rooms/_room.html.erb
+++ b/app/views/rooms/_room.html.erb
@@ -1,7 +1,10 @@
 <div id="<%= dom_id room %>">
   <p>
     <strong>Bank:</strong>
-    <%= room.bank_id %>
+      <%= room.bank_id %>
+    <strong>Player 1:</strong>
+    <%= room.play1_id %>
+    <strong>Player 2:</strong>
+    <%= room.play2_id %>
   </p>
-
 </div>
