--- a/app/views/rooms/_form.html.erb
+++ b/app/views/rooms/_form.html.erb
@@ -14,6 +14,10 @@
   <div>
     <%= form.label :bank_id, style: "display: block" %>
     <%= form.number_field :bank_id %>
+    <%= form.label :play1_id, style: "display: block" %>
+    <%= form.number_field :play1_id %>
+    <%= form.label :play2_id, style: "display: block" %>
+    <%= form.number_field :play2_id %>
   </div>
 
   <div>
