--- a/app/views/rooms/new.html.erb
+++ b/app/views/rooms/new.html.erb
@@ -5,5 +5,5 @@
 <br>
 
 <div>
-  <%= link_to "Back to rooms", rooms_path %>
+  <%= button_to "Back to rooms", rooms_path, :method => :get %>
 </div>
