--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -8,18 +8,15 @@ html, body{
 
 <!-- Outer container, full page width and height, red border -->
 <div class="container-fluid d-flex justify-content-center align-items-center" style="height:100vh; overflow:hidden; border: 2px solid green">
+  <!-- Inner row, half the width and height, centered, blue border -->
+  <div class="row text-center d-flex align-items-center" style="overflow:hidden; width:75vw; height:75vh; border: 1px solid red">
+    <!-- Innermost text, wraps automatically, automatically centered -->
+    <h1>Welcome to Morfame Casino</h1>
+    <h2>Make your selection of incredible Games</h2>
 
-<!-- Inner row, half the width and height, centered, blue border -->
-<div class="row text-center d-flex align-items-center" style="overflow:hidden; width:75vw; height:75vh; border: 1px solid red">
-
-<!-- Innermost text, wraps automatically, automatically centered -->
-<h1>Welcome to Morfame Casino</h1>
-<h2>Make your selection of incredible Games Rooms</h2>
-
-
-<h3><%= link_to "RedJack Room", rooms_path %></h3>
-<h3><%= link_to "Roulette Room", rooms_path %></h3>
-<h3><%= link_to "Slots Room", rooms_path %></h3> -->
-
-<!-- </div> <!-- Inner row -->
-<!-- </div> <!-- Outer container -->
+    <h3><%= link_to "RedJack Foyer", rooms_path %></h3>
+    <h3><%= link_to "Roulette Foyer", rooms_path %></h3>
+    <h3><%= link_to "Slots Foyer", rooms_path %></h3>
+  
+  </div>
+</div>  
