Card Deck Class created

--- a/app/views/rooms/_form.html.erb
+++ b/app/views/rooms/_form.html.erb
@@ -20,6 +20,20 @@
         <%= form.number_field :play1_id %>
         <%= form.label :play2_id, style: "display: block" %>
         <%= form.number_field :play2_id %>
+        <%= form.label :play3_id, style: "display: block" %>
+        <%= form.number_field :play3_id %>
+        <%= form.label :play4_id, style: "display: block" %>
+        <%= form.number_field :play4_id %>
+        <%= form.label :play5_id, style: "display: block" %>
+        <%= form.number_field :play5_id %>
+        <%= form.label :play6_id, style: "display: block" %>
+        <%= form.number_field :play6_id %>
+        <%= form.label :play7_id, style: "display: block" %>
+        <%= form.number_field :play7_id %>
+        <%= form.label :play8_id, style: "display: block" %>
+        <%= form.number_field :play8_id %>
+        <%= form.label :play9_id, style: "display: block" %>
+        <%= form.number_field :play9_id %>
       </li>
     </ul>
   </div>
