--- a/app/views/rooms/_room.html.erb
+++ b/app/views/rooms/_room.html.erb
@@ -1,10 +1,4 @@
 <div id="<%= dom_id room %>">
-  <p>
-    <strong>Bank:</strong>
-      <%= room.bank_id %>
-    <strong>Player 1:</strong>
-    <%= room.play1_id %>
-    <strong>Player 2:</strong>
-    <%= room.play2_id %>
-  </p>
+    <p><strong>Banker:</strong>
+      <%= room.bank_id %></p>
 </div>
