--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -24,8 +24,8 @@ html, body{
       <% end %>
     </div>
 
-    <h4><%= button_to "New room", new_room_path, :method => :get %></h4>
-    <%= button_to "Casino Foyer", root_path, method: :get %>
+    <h5><%= button_to "New room", new_room_path, :method => :get %></h5>
+    <h5><%= button_to "Casino Foyer", root_path, method: :get %></h5>
 
   </div>
 </div>
