Struggling with Model relationship

--- a/app/views/players/_player.html.erb
+++ b/app/views/players/_player.html.erb
@@ -1,22 +1,16 @@
 <div id="<%= dom_id player %>">
   <p>
-    <strong>Name:</strong>
-    <%= player.name %>
-  </p>
+    Name:
+    <strong><%= player.name %></strong>
 
-  <p>
-    <strong>Role:</strong>
-    <%= player.role %>
-  </p>
+    Role:
+    <Strong><%= player.role %></Strong>
 
-  <p>
-    <strong>Rank:</strong>
-    <%= player.rank %>
-  </p>
+    Rank:
+    <Strong><%= player.rank %></Strong>
 
-  <p>
-    <strong>Insess:</strong>
-    <%= player.insess %>
+    In-Session:
+    <Strong><%= player.insess %></Strong>
   </p>
 
 </div>
