--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -22,7 +22,7 @@ html, body{
   
     <h5>Admin Functions</h5>
 
-    <h6><%= button_to "Manage Players", rooms_path, :method => :get %></h6>
+    <h6><%= button_to "Manage Players", players_path, :method => :get %></h6>
     <h6><%= button_to "Manage Cards", rooms_path, :method => :get %></h6>
 
   </div>
