--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -16,7 +16,7 @@ html, body{
       <%= button_to "Edit this room", edit_room_path(@room), :method => :get %>
       <%= button_to "Back to rooms", rooms_path, :method => :get %>
       <%= button_to "Deal the Cards", rooms_path, :method => :get %>
-      <%= button_to "Destroy this room", @room, method: :delete %>
+      <%= button_to "Destroy Room", @room, method: :delete %>
     </div>
   </div>
 </div>
