--- a/app/views/players/index.html.erb
+++ b/app/views/players/index.html.erb
@@ -25,5 +25,6 @@ html, body{
     </div>
 
     <%= button_to "New player", new_player_path, :method => :get %>
+    <%= button_to "Casino Foyer", root_path, :method => :get %>
   </end>
 </end>
